fixing swagers
