# src/api/auth.ts
@@ -4,6 +4,9 @@ import { Request, Response} from 'express';
 // controllers
 import Autentications from '../controllers/authControllers';
 
+// middlewares
+import { JWTAuthentication } from '../middlewares/authentication';
+
 // utils
 import response from '../utils/response';
 
@@ -11,7 +14,7 @@ const router = express.Router();
 
 router.post('/login', async (req: Request, res:Response) => {
   try {
-    const result = await new Autentications().login(req.body);
+    const result = await new Autentications().login(req, req.body);
     response.ok('Login success', result, res);
   } catch (error) {
     response.bad('Login error', error, res);
@@ -20,16 +23,16 @@ router.post('/login', async (req: Request, res:Response) => {
 
 router.post('/register', async (req: Request, res:Response) => {
   try {
-    const result = await new Autentications().register(req.body);
+    const result = await new Autentications().register(req, req.body);
     response.ok('Register success', result, res);
   } catch (error) {
     response.bad('Register error', error, res);
   }
 });
 
-router.get('/profile', async (req: Request, res:Response) => {
+router.get('/profile', JWTAuthentication, async (req: Request, res:Response) => {
   try {
-    const result = await new Autentications().profile(req.body);
+    const result = await new Autentications().profile(req);
     response.ok('Profile success', result, res);
   } catch (error) {
     response.bad('Profile error', error, res);
